# search_appearance

./: .env.example  .gitignore  DETAILED_EXECUTION_PLAN.md  Dockerfile  IDEM_INSTRUCTIONS.md  LICENSE  QUICK_START.md  README.md  ROADMAP.md  STAGE_0_1_IMPLEMENTATION.md  analyze_data.py  docker-compose.yml  implementation_plan.md  main.py  package-lock.json  populate_dataset.py  pyproject.toml  system_implementation_plan.md  test_providers.py
config/: providers.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1769536092298-53041fedd73a8.mjs
frontend/src/: App.tsx  index.css  types.ts
mvp/annotator/: batch_process.py  client.py  prompts.py
mvp/api/: main.py  schemas.py  websocket.py
mvp/core/: config.py  distance_matrices.py  embedder.py  face_recognition.py  hasher.py  similarity.py  state.py
mvp/generators/: __init__.py  base.py  dalle_generator.py
mvp/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  registry.py
mvp/schema/: attributes.py  dynamic_schema.py  models.py
mvp/search/: aggregator.py  ranker.py  session.py
mvp/storage/: database.py  db.py  models.py
mvp/text_search/: __init__.py  prompt_parser.py
scripts/: debug_config.py  debug_db_status.py  ingest_annotated.py  ingest_manual.py  run_demo.py  verify_history.py
tests/: benchmark_search.py  qualitative_test.py  test_core.py
tools/: check_similarity.py  debug_routes.py  manage_blacklist.py  reproduce_duplicate.py  test_duplicate_upload.py
(+6 files in other folders)
